@@ -1,6 +1,7 @@
 CHANGELOG Roundcube Webmail
 ===========================
 
+- Exclude E_STRICT from error_reporting for PHP 5.4
 - Copy all skins in installto script (#1488376)
 - Prevent from folder selection on virtual folder collapsing (#1488346)
 
